deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confighub-service
  namespace: confighub
  labels:
    app: confighub
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: confighub
---
apiVersion: v1
kind: Service
metadata:
  name: confighub-nodeport
  namespace: confighub
  labels:
    app: confighub
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: confighub
